--- a/README.textile
+++ b/README.textile
@@ -10,12 +10,12 @@ In the head of your html file:
 
 In the body of your html file:
 
-@<ul class="f32">
+pre.<ul class="f32">
   <li class="flag ar">Argentina</li>
   <li class="flag ar">Australia</li>
   <li class="flag ar">Austria</li>
 ...
-</ul>@
+</ul>
 
 If a previously visited site uses this same code, the file is already in the cache of the user and doesn't need to be downloaded again.
 NB: It won't work in https environments. You can download the css files instead and include them locally instead.
