changed left into 0, fixed css selector for .mc

--- a/README.textile
+++ b/README.textile
@@ -19,7 +19,9 @@ In the body of your html file:
 </ul>
 </pre>
 
+The countries corresponding to the codes can be found at "http://en.wikipedia.org/wiki/ISO_3166-1_alpha-2":http://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
+
 If a previously visited site uses this same code, the file is already in the cache of the user and doesn't need to be downloaded again.
-NB: It won't work in https environments. You can download the css files instead and include them locally instead.
+NB: It won't work in https environments. You can download the css files and include them locally instead.
 
 See "the cheese wiki":http://www.cheesewiki.com/ for an example
