Updates link in readme

--- a/README.textile
+++ b/README.textile
@@ -6,7 +6,7 @@ h2. Example usage:
 
 In the head of your html file:
 
-@<link rel="stylesheet" type="text/css" href="http://github.com/lafeber/world-flags-sprite/raw/master/stylesheets/flags32.css" />@
+@<link rel="stylesheet" type="text/css" href="http://cloud.github.com/downloads/lafeber/world-flags-sprite/flags32.css" />@
 
 In the body of your html file:
 
